--- a/databases/php-oci8/Makefile
+++ b/databases/php-oci8/Makefile
@@ -1,8 +1,10 @@
-# $NetBSD: Makefile,v 1.1.1.1 2007/12/04 00:31:41 grant Exp $
+# $NetBSD: Makefile,v 1.1.1.1.26.1 2010/07/04 07:09:53 agc Exp $
 
 MODNAME=		oci8
 CATEGORIES+=		databases
 COMMENT=		PHP extension for Oracle 8 (and above) databases
+
+PKG_DESTDIR_SUPPORT=	user-destdir
 
 USE_PHP_EXT_PATCHES=	yes
 
