--- a/devel/py-sysctl/Makefile
+++ b/devel/py-sysctl/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.1.1.1 2010/04/11 06:48:41 cherry Exp $
+# $NetBSD: Makefile,v 1.1.1.1.2.1 2010/07/04 07:10:50 agc Exp $
 
 DISTNAME=	py-sysctl-0.1
 PKGNAME=	${PYPKGPREFIX}-sysctl-0.1
@@ -13,6 +13,7 @@ COMMENT=	Python interface to sysctl(3)
 
 PKG_DESTDIR_SUPPORT=	user-destdir
 
+PYTHON_VERSIONS_ACCEPTED= 26 25
 PYDISTUTILSPKG=	# yes
 
 .include "../../lang/python/extension.mk"
