--- a/devel/subversion/Makefile.common
+++ b/devel/subversion/Makefile.common
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile.common,v 1.34 2010/03/03 16:33:08 gdt Exp $
+# $NetBSD: Makefile.common,v 1.34.4.1 2010/07/04 07:10:51 agc Exp $
 # used by devel/java-subversion/Makefile
 # used by devel/p5-subversion/Makefile
 # used by devel/py-subversion/Makefile
@@ -11,7 +11,7 @@ DISTNAME=		subversion-${SVNVER}
 CATEGORIES=		devel scm
 MASTER_SITES=		http://subversion.tigris.org/downloads/
 
-MAINTAINER=		gdt@NetBSD.org
+MAINTAINER=		pkgsrc-users@NetBSD.org
 HOMEPAGE=		http://subversion.tigris.org/
 LICENSE=		apache-1.1
 
