--- a/games/openmortal/Makefile
+++ b/games/openmortal/Makefile
@@ -1,8 +1,8 @@
-# $NetBSD: Makefile,v 1.29 2010/06/13 22:44:22 wiz Exp $
+# $NetBSD: Makefile,v 1.29.2.1 2010/07/04 07:16:10 agc Exp $
 #
 
 DISTNAME=	openmortal-0.7
-PKGREVISION=	11
+PKGREVISION=	12
 CATEGORIES=	games
 MASTER_SITES=	${MASTER_SITE_SOURCEFORGE:=openmortal/}
 EXTRACT_SUFX=	.tar.bz2
@@ -10,6 +10,8 @@ EXTRACT_SUFX=	.tar.bz2
 MAINTAINER=	pkgsrc-users@NetBSD.org
 HOMEPAGE=	http://apocalypse.rulez.org/~upi/Mortal/
 COMMENT=	Parody of Mortal Kombat with real characters
+
+PKG_DESTDIR_SUPPORT=	user-destdir
 
 GNU_CONFIGURE=	yes
 USE_LANGUAGES=	c c++
