--- a/www/ap22-dnssd/Makefile
+++ b/www/ap22-dnssd/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.4 2010/06/13 22:45:32 wiz Exp $
+# $NetBSD: Makefile,v 1.4.2.1 2010/07/04 07:28:52 agc Exp $
 #
 
 DISTNAME=	mod_dnssd-0.5
@@ -15,6 +15,7 @@ GNU_CONFIGURE=	yes
 USE_TOOLS=	pkg-config gmake
 USE_LIBTOOL=	yes
 
+CONFIGURE_ENV+=		APXS=${APXS:Q}
 CONFIGURE_ARGS+=	--disable-lynx
 
 PKG_APACHE_ACCEPTED=	apache22
