--- a/databases/openldap-cloak/Makefile
+++ b/databases/openldap-cloak/Makefile
@@ -1,7 +1,6 @@
-# $NetBSD: Makefile,v 1.7 2010/06/02 12:16:37 adam Exp $
+# $NetBSD: Makefile,v 1.7.2.1 2010/07/25 15:10:51 spz Exp $
 
 PKGNAME=	${DISTNAME:S/-/-cloak-/}
-PKGREVISION=	1
 COMMENT=	Remove null-ops for OpenLDAP
 
 CONFLICTS+=	openldap<2.3.23nb1
