--- a/databases/openldap-smbk5pwd/Makefile
+++ b/databases/openldap-smbk5pwd/Makefile
@@ -1,7 +1,6 @@
-# $NetBSD: Makefile,v 1.7 2010/06/02 12:17:22 adam Exp $
+# $NetBSD: Makefile,v 1.7.2.1 2010/07/25 15:10:51 spz Exp $
 
 PKGNAME=	${DISTNAME:S/-/-smbk5pwd-/}
-PKGREVISION=	1
 COMMENT=	Samba and Kerberos password sync for OpenLDAP
 
 CONFLICTS+=	openldap<2.3.23nb1
