--- a/databases/openldap/Makefile.common
+++ b/databases/openldap/Makefile.common
@@ -1,7 +1,7 @@
-# $NetBSD: Makefile.common,v 1.25 2010/02/19 20:49:29 ghen Exp $
+# $NetBSD: Makefile.common,v 1.25.4.1 2010/07/25 15:10:50 spz Exp $
 
 # please stick to the "stable" releases as much as possible!
-DISTNAME=		openldap-2.4.21
+DISTNAME=		openldap-2.4.23
 CATEGORIES=		databases
 MASTER_SITES=		ftp://ftp.openldap.org/pub/OpenLDAP/openldap-release/
 MASTER_SITES+=		http://www.openldap.org/software/download/OpenLDAP/openldap-release/
