--- a/mail/dovecot/Makefile
+++ b/mail/dovecot/Makefile
@@ -1,7 +1,7 @@
-# $NetBSD: Makefile,v 1.149 2010/06/20 09:55:52 ghen Exp $
+# $NetBSD: Makefile,v 1.149.2.1 2010/07/26 09:08:01 tron Exp $
 
 DOVECOT_VERSION=	1.2
-DOVECOT_SUBVERSION=	.12
+DOVECOT_SUBVERSION=	.13
 SIEVE_VERSION=		0.1.17
 MANAGESIEVE_VERSION=	0.11.11
 DISTNAME=		dovecot-${DOVECOT_VERSION}${DOVECOT_SUBVERSION}
